--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"version": "0.1.0",
 	"private": true,
+	"homepage":"https://www.malonglobaltech.com",
 	"dependencies": {
 		"@emotion/react": "^11.9.3",
 		"@emotion/styled": "^11.9.3",
