--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"version": "0.1.0",
 	"private": true,
-	"homepage":".",
+	"homepage":"https://www.malonglobaltech.com/home/",
 	"dependencies": {
 		"@emotion/react": "^11.9.3",
 		"@emotion/styled": "^11.9.3",
